--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-highlight-within-textarea": "^0.9.12",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
